runfix: correct video tiles background color in dark mode

--- a/src/style/components/group-video-grid.less
+++ b/src/style/components/group-video-grid.less
@@ -97,6 +97,7 @@
       box-sizing: border-box;
       padding: 0;
       border: none;
+      background-color: inherit;
 
       &:focus {
         z-index: 1;
